# cpp-image-converter

./: CMakeLists.txt  README.md
.github/workflows/: cpp-ci.yml
ImgConverter/: CMakeLists.txt  main.cpp
ImgLib/: CMakeLists.txt  bmp_image.cpp  jpeg_image.cpp
